@@ -166,3 +166,4 @@ Changes between KWord-1.2-beta1 and KWord-1.2-beta2
 - Add option "Enable cursor in protected text object"
 - Now we can configure which type of formatting char we want to display
 - Now we can configure footnote line separator
+- Add support to insert Native file (import text and format not frameset)
